--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #000 
+    background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -22,7 +23,6 @@ body {
     display: flex;
     border-radius: 8px;
     padding: 16px 0 0 16px;
-
 }
 
 .logo img {
@@ -43,7 +43,7 @@ body {
     text-decoration: none;
     font-weight: 600px;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
+ 
 }
 
 .library{
@@ -72,7 +72,7 @@ body {
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
+ 
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -112,7 +112,7 @@ body {
 .section-playlist__content .text{
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
+ 
 }
 
 .section-playlist__content .tittle{
@@ -131,7 +131,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -190,12 +189,14 @@ body {
     font-weight: 400;
     font-size: 12px;
     margin-bottom: 10px;
+   
 }
 
 .disclaimer-premium .disclaimer-premium__subtitle{
     color: #ffffff;
     font-size: 14px;
     font-weight: 500;
+ 
 }
 .disclaimer-premium button{
     background-color: #ffffff;
@@ -207,4 +208,5 @@ body {
     border-radius: 40px;
     cursor: pointer;
     flex-shrink: 0;
+
 }
